fixed about page; added new facilities image; aligned dropdown chevron;

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -55,6 +55,7 @@
 
         svg {
           width: 20px;
+          margin-top: 3px;
         }
 
         a {
